--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.12",
+    "@prisma/client": "^5.7.1",
+    "firebase": "^10.7.1",
+    "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-quill": "^2.0.0",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
+    "@types/node": "20.10.5",
+    "@types/react": "18.2.46",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "prisma": "^5.7.1"
   }
 }
