--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ GOOGLE_SECRET = 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
 FACEBOOK_CLIENT_ID = 1483720509028457
 FACEBOOK_CLIENT_SECRET = 148f84354c4e93f83fa2d324399e9cd7
 
-NEXTAUTH_URL = http://localhost:3000
+NEXTAUTH_URL = https://uniq-blog-app.vercel.app/
 NEXTAUTH_SECRET = "mysecretid"
 
 DATABASE_URL="mongodb+srv://margo:margo@cluster0.nuayqb3.mongodb.net/blog?retryWrites=true&w=majority"
